[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Sprite.png" type="Texture" id=2]
[ext_resource path="res://Effects/flash.gdshader" type="Shader" id=3]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Overlap/DetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Overlap/itemDetectionZone.gd" type="Script" id=6]
[ext_resource path="res://Overlap/autoCollectDetectionZone.gd" type="Script" id=7]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[sub_resource type="CircleShape2D" id=4]
radius = 96.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.2, 1.2, 1.2, 1 )
material = SubResource( 5 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="AbilityCoolDown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AbilityTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AbilityTicker" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
shape = SubResource( 2 )

[node name="itemDetectionZone" parent="." instance=ExtResource( 5 )]
collision_mask = 64
script = ExtResource( 6 )

[node name="CollisionShape2D" parent="itemDetectionZone" index="0"]
visible = false
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AutoCollectDetectionZone" parent="." instance=ExtResource( 5 )]
collision_mask = 128
script = ExtResource( 7 )

[node name="CollisionShape2D" parent="AutoCollectDetectionZone" index="0"]
visible = false
shape = SubResource( 4 )

[connection signal="timeout" from="AbilityCoolDown" to="." method="_on_AbilityCoolDown_timeout"]
[connection signal="timeout" from="AbilityTimer" to="." method="_on_AbilityTimer_timeout"]
[connection signal="timeout" from="AbilityTicker" to="." method="_on_AbilityTicker_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="itemDetectionZone"]
[editable path="AutoCollectDetectionZone"]
